# medical-billing-extraction

./: .env.example  .gitignore  AGENTS.md  ASSIGNMENT.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 0de1443cd0f2_initial.py  9eeee6264b5d_add_auth_and_rls.py
backend/app/ai/: config.py  context.py  orchestrator.py  tools.py  types.py
backend/app/ai/agents/: factory.py
backend/app/ai/agents/echo/: executor.py
backend/app/ai/agents/extractor/: __init__.py  executor.py
backend/app/ai/prompts/: prompt_loader.py
backend/app/ai/prompts/templates/echo/: system.j2  user.j2
backend/app/ai/utils/: concurrency.py
backend/app/api/: main.py
backend/app/api/dependencies/: auth.py  container.py
backend/app/api/routes/: health.py  jobs.py
backend/app/api/schema/: __init__.py
backend/app/config/: settings.py
backend/app/core/: context_manager.py
backend/app/core/common/: logger.py  time.py
backend/app/core/common/id/: short_id.py  snowflake.py
backend/app/core/database/: base_database.py  postgres.py
backend/app/dao/: base_pg_dao.py
backend/app/dao/models/: __init__.py  base.py  job.py
backend/app/dao/pg/: job_dao.py
backend/app/models/: __init__.py  extraction.py
backend/app/service/: base_service.py  container.py  exceptions.py  extraction_service.py  job_service.py
backend/app/worker/: loop.py
backend/scripts/: migrate.sh
backend/tests/: test_jobs.py
docs/: design.md  domain.md  schema.md
(+16 files in other folders)
