[project]
name = "medical-billing-records"
version = "0.1.0"
description = "Medical billing record extraction agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "openai-agents>=0.15.1",
    "jinja2>=3.1.6",
    "structlog>=25.5.0",
    "python-multipart>=0.0.27",
    "pytz>=2026.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
